src/main/kotlin/org/example/firstkopring/global/error/exception/BusinessException.kt
package org.example.firstkopring.global.error.exception

open class BusinessException(
    val errorCode: ErrorCode
): RuntimeException()